feat: simplified JWT token decoding